# cddb-data-cleaning-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.sh  setup.cfg
.github/workflows/: tests.yml
data/output/: before_cleaning_failure_cases_summary_table.txt
data/output/csv/: after_cleaning_failure_cases_df.csv  after_cleaning_failure_cases_summary.csv  before_cleaning_failure_cases_df.csv  before_cleaning_failure_cases_summary.csv  comps_df.csv  comps_df_formatted.csv  evaluation_summary_df.csv  track_level_df.csv
notebooks/: cleaning_cddb.ipynb
scripts/: run_clean_cddb.py
scripts/sql/: querying_cddb.sql
src/: cleaning_cddb.ipynb
src/clean_cddb/: __init__.py  checks.py  cleaning_transforms.py  schema.py  utils.py
tests/: test_cleaning_transforms.py  test_imports.py
