[metadata]
name = clean-cddb
description = Data cleaning package for CDDB (Compact Disc Database) dataset.
version = 0.0.1
license = MIT
license_file = LICENSE

[options]
packages = 
    clean_cddb
install_requires =
    ftfy
    pandas
    pandera
    seaborn
    tabulate
python_requires >= 3.7
package_dir =
    =src